--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,5 +1,17 @@
 <div class="header-menu">
   <nav class="menu-content">
+    <ul class="menu-dropdown">
+      <li>
+        <a href="#" onclick="toggleDropdownMenu();">
+          <i class="fa fa-fw fa-bars"></i>
+        </a>
+        <ul class="menu-categories">
+          <li><a href="#">SUB01</a></li>
+          <li><a href="#">SUB02</a></li>
+          <li><a href="#">SUB03</a></li>
+        </ul>
+      </li>
+    </ul>
     {% for item in site.data.settings.menu %}
       <a href="{{ site.github.url }}/{{ item.path }}/{{ item.url }}">{{ item.name }}</a>
     {% endfor %}
