--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -293,6 +293,31 @@ hr {
   float: left;
 }
 
+.menu-dropdown {
+  position: relative;
+  list-style-type: none;
+  width: 36px;
+  margin: 0;
+  padding: 0;
+  display: inline-block;
+}
+
+.menu-dropdown i {
+  display: inline-block;
+  padding-left: 5px;
+}
+
+.menu-dropdown .menu-categories {
+  position: absolute;
+  top: 30px;
+  left: 0;
+  display: none;
+  padding-left: 12px;
+  list-style-type: none;
+  background-color: #fff;
+  border: 1px solid #bfbfbf;
+}
+
 .menu-content a {  /* in 200523 by namu */
   color: #888;
   font-size: 1rem;
