--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -2,13 +2,13 @@
   <nav class="menu-content">
     <ul class="menu-dropdown">
       <li>
-        <a href="#" onclick="toggleDropdownMenu();">
+        <a href="#" id="menu-dropdown-bars">
           <i class="fa fa-fw fa-bars"></i>
         </a>
         <ul class="menu-categories">
-          <li><a href="#">SUB01</a></li>
-          <li><a href="#">SUB02</a></li>
-          <li><a href="#">SUB03</a></li>
+          {% for item in site.data.settings.dropdown_menu %}
+          <li><a href="{{ site.github.url }}/{{ item.path }}/{{ item.url }}">{{ item.name }}</a></li>
+          {% endfor %}
         </ul>
       </li>
     </ul>
