--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,7 +12,13 @@ layout: default
 </h2>
 
 {% if page.image and page.image-view %}
-  <img src="{{ site.github.url }}/assets/img/{{ page.image }}">
+  {% if page.title == '소나무' %}
+    <a name="sonamu">
+      <img src="{{ site.github.url }}/assets/img/{{ page.image }}">
+    </a>
+  {% else %}
+    <img src="{{ site.github.url }}/assets/img/{{ page.image }}">
+  {% endif %}
 {% endif %}
 
 {{ content }}
