footer: Add referred from Lagrange

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,5 +9,10 @@
       <span class="custom-tab"></span>
       {{ site.description }} by. {{ site.author }}
     </a>
+    <br/>
+    referred to the
+    <a href="https://github.com/LeNPaul/Lagrange" style="padding: 0;">
+      Lagrange
+    </a>
   </div>
 </footer>
