footer: Add powered by for jekyll

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,7 +10,14 @@
       {{ site.description }} by. {{ site.author }}
     </a>
     <br/>
-    referred to the
+    Powered by
+    <a href="https://jekyllrb.com/" style="padding: 0;">
+      Jekyll
+    </a>
+    <span class="custom-tab"></span>
+    |
+    <span class="custom-tab"></span>
+    Referred to the
     <a href="https://github.com/LeNPaul/Lagrange" style="padding: 0;">
       Lagrange
     </a>
