config: Modify author name

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
       <span class="custom-tab"></span>
       |
       <span class="custom-tab"></span>
-      {{ site.description }} by. {{ site.author }}
+      {{ site.description }} by {{ site.author }}
     </a>
     <br/>
     Powered by
