--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -143,6 +143,11 @@ hr {
   margin-bottom: 25px;
 }
 
+.thumbnail-container:hover {
+	border: 3px solid #eaeaea;
+	transition: 0.3s;
+}
+
 .thumbnail-container img{
   margin-top: -11.5%;
   margin-bottom: -11.5%;
