--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -315,6 +315,7 @@ hr {
   margin-bottom: 4rem;
   display: block;
   background-color: rgba(255, 255, 255, 0.88);
+  z-index: 99;
 }
 
 .menu-content {
