menu: Add menu logo

--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -9,13 +9,19 @@
           {% for item in site.data.settings.dropdown_menu %}
             {% if item.path == 'daily' %}
               <li style="border-top: 1px solid #bfbfbf; padding-top: 3px;">
-                <a href="{{ site.github.url }}/{{ item.path }}/{{ item.url }}" class="content">
+                <a href="{{ site.github.url }}/{{ item.path }}/{{ item.url }}" class="menu-img">
+                  <img src="{{ site.github.url }}/assets/img/{{ item.icon }}.png">
+                </a>
+                <a href="{{ site.github.url }}/{{ item.path }}/{{ item.url }}" class="content menu-name">
                   {{ item.name }}
                 </a>
               </li>
             {% else %}
               <li>
-                <a href="{{ site.github.url }}/{{ item.path }}/{{ item.url }}" class="content">
+                <a href="{{ site.github.url }}/{{ item.path }}/{{ item.url }}" class="menu-img">
+                  <img src="{{ site.github.url }}/assets/img/{{ item.icon }}.png">
+                </a>
+                <a href="{{ site.github.url }}/{{ item.path }}/{{ item.url }}" class="content menu-name">
                   {{ item.name }}
                 </a>
               </li>
