--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -329,8 +329,9 @@ hr {
   position: absolute;
   width: 40px;
   top: 800px;
-  right: -40px;
+  right: 15px;
   cursor: pointer;
+  z-index: 98;
 }
 
 .menu-content {
