--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -109,7 +109,7 @@ hr {
 
 .masthead {
   padding-top: 0.5rem;
-  /* padding-bottom: 0.5rem; */
+  padding-bottom: 0.5rem;
   /* margin-bottom: 4rem; */
   font-family: "Quattrocento Sans", sans-serif;
 }
@@ -129,7 +129,7 @@ hr {
 }
 
 .header-hr {  /* in 200523 by namu */
-  margin-top: 43px;
+  margin-top: 33px;
 }
 
 /*
@@ -311,7 +311,7 @@ hr {
   position: -webkit-sticky; /* for safari */
   position: sticky;
   top: 0;
-  padding-top: 0.5rem;
+  padding-top: 1px;
   margin-bottom: 4rem;
   display: block;
   background-color: rgba(255, 255, 255, 0.88);
@@ -328,7 +328,7 @@ hr {
 .header-menu .social-icons #go-to-top {
   position: absolute;
   width: 40px;
-  top: 800px;
+  top: 880px;
   right: 15px;
   cursor: pointer;
   z-index: 98;
@@ -336,6 +336,7 @@ hr {
 
 .menu-content {
   float: left;
+  margin-left: 5px;
 }
 
 .menu-dropdown {
@@ -354,10 +355,10 @@ hr {
 
 .menu-dropdown .menu-categories {
   position: absolute;
-  top: 30px;
-  left: 0;
+  top: 31px;
+  left: -5px;
   display: none;
-  width: 150px;
+  width: 193px;
   font-size: 14pt;
   text-align: left;
   padding-left: 0;
@@ -372,8 +373,8 @@ hr {
 }
 
 .menu-dropdown .menu-categories li:hover {
-  background-color: #dfdfdf;
-  color: #343434;
+  background-color: #cfcfcf;
+  color: #222;
   cursor: pointer;
 }
 
@@ -384,7 +385,7 @@ hr {
 .menu-dropdown .menu-categories .menu-img {
   position: absolute;
   top: 9px;
-  left: 10px;
+  left: 15px;
   width: 20px;
 }
 
@@ -395,7 +396,7 @@ hr {
 .menu-dropdown .menu-categories .menu-name {
   position: absolute;
   top: 6px;
-  left: 40px;
+  left: 45px;
 }
 
 .menu-content .content {  /* in 200523 by namu */
@@ -414,6 +415,7 @@ hr {
 
 .social-icons {
   float: right;
+  margin-right: 10px;
 }
 
 .social-icons a {
