--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -134,6 +134,7 @@ hr {
 
 .thumbnail-container {
   max-width: 100%;
+  max-height: 240px;
   overflow: hidden;
   border-radius: 5px;
   margin-bottom: 25px;
