--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,40 +12,44 @@ layout: default
   {%- if site.posts.size > 0 -%}
     <!--  <h2 class="post-list-heading">{{ page.list_title | default: "Posts" }}</h2>  -->
     {%- for post in site.posts -%}
-      {% assign content_length = post.content | size %}
-      <h1 class="home-post-title">
-        <a class="post-link" href="{{ site.github.url }}{{ post.url }}">
-          {{ post.title | escape }}
-        </a>
-      </h1>
-      <span class="home-post-date">
-        <i class="fa fa-calendar" aria-hidden="true"></i>
-        {% if post.updated %}
-          {{ post.updated | date: '%Y-%m-%d %H:%M' }} -
-        {% else %}
-          {{ post.date | date: '%Y-%m-%d %H:%M' }} -
-        {% endif %}
-        <i class="fa fa-clock-o" aria-hidden="true"></i>
-        {% include read-time.html %}
-      </span>
-      {% if post.image %}
-        {% if post.image contains '://' %}
-        {% assign img_src = post.image %}
-        {% else %}
-        {% assign img_src = site.github.url | append: '/assets/post-img/' | append: post.image %}
-        {% endif %}
-        <div class="thumbnail-container">
-          <a href="{{ site.github.url }}{{ post.url }}">
-            <img src="{{ img_src }}">
-          </a>
-        </div>
+      {% if post.categories %}
+        {% unless post.categories contains 'demian' %}
+          {% assign content_length = post.content | size %}
+          <h1 class="home-post-title">
+            <a class="post-link" href="{{ site.github.url }}{{ post.url }}">
+              {{ post.title | escape }}
+            </a>
+          </h1>
+          <span class="home-post-date">
+            <i class="fa fa-calendar" aria-hidden="true"></i>
+            {% if post.updated %}
+              {{ post.updated | date: '%Y-%m-%d %H:%M' }} -
+            {% else %}
+              {{ post.date | date: '%Y-%m-%d %H:%M' }} -
+            {% endif %}
+            <i class="fa fa-clock-o" aria-hidden="true"></i>
+            {% include read-time.html %}
+          </span>
+          {% if post.image %}
+            {% if post.image contains '://' %}
+            {% assign img_src = post.image %}
+            {% else %}
+            {% assign img_src = site.github.url | append: '/assets/post-img/' | append: post.image %}
+            {% endif %}
+            <div class="thumbnail-container">
+              <a href="{{ site.github.url }}{{ post.url }}">
+                <img src="{{ img_src }}">
+              </a>
+            </div>
+          {% endif %}
+          <p style="margin: 15px 0 60px 0;">
+            {{ post.content | strip_html | truncate: 150 }}
+            {% if content_length > 349 %}
+              <a href="{{ site.github.url }}{{ post.url }}">Read more</a>
+            {% endif %}
+          </p>
+        {% endunless %}
       {% endif %}
-      <p style="margin: 15px 0 60px 0;">
-        {{ post.content | strip_html | truncate: 150 }}
-        {% if content_length > 349 %}
-          <a href="{{ site.github.url }}{{ post.url }}">Read more</a>
-        {% endif %}
-      </p>
     {%- endfor -%}
 
     <!-- Pagination links -->
