--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -419,8 +419,9 @@ pre {
   padding: 1rem;
   font-size: .8rem;
   line-height: 1.4;
+  overflow: auto;
   white-space: pre;
-  white-space: pre-wrap;
+  /* white-space: pre-wrap; */
   word-break: break-all;
   word-wrap: break-word;
   background-color: #f5f5f5;
