--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,7 +13,7 @@ layout: default
     <!--  <h2 class="post-list-heading">{{ page.list_title | default: "Posts" }}</h2>  -->
     {%- for post in site.posts -%}
       {% if post.categories %}
-        {% unless post.categories contains 'demian' %}
+        {% unless post.categories contains 'demian' or post.categories contains 'daily' %}
           {% assign content_length = post.content | size %}
           <h1 class="home-post-title">
             <a class="post-link" href="{{ site.github.url }}{{ post.url }}">
