--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -10,7 +10,7 @@
             {% if item.path == 'daily' %}
               <li style="border-top: 1px solid #bfbfbf; padding-top: 3px;">
                 <a href="{{ site.github.url }}/{{ item.path }}/{{ item.url }}" class="menu-img">
-                  <img src="{{ site.github.url }}/assets/img/{{ item.icon }}.png">
+                  <img src="{{ site.github.url }}/assets/img/{{ item.icon }}.png" alt="{{ item.icon }}">
                 </a>
                 <a href="{{ site.github.url }}/{{ item.path }}/{{ item.url }}" class="content menu-name">
                   {{ item.name }}
@@ -20,7 +20,7 @@
             {% else %}
               <li>
                 <a href="{{ site.github.url }}/{{ item.path }}/{{ item.url }}" class="menu-img">
-                  <img src="{{ site.github.url }}/assets/img/{{ item.icon }}.png">
+                  <img src="{{ site.github.url }}/assets/img/{{ item.icon }}.png" alt="{{ item.icon }}">
                 </a>
                 <a href="{{ site.github.url }}/{{ item.path }}/{{ item.url }}" class="content menu-name">
                   {{ item.name }}
