--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,7 +2,79 @@
 layout: default
 ---
 
+<style>
+  #intro-container {
+    width: 100%;
+    text-align: center;
+  }
+  @keyframes messageFadeIn {
+	0% {
+      opacity: 0;
+      transform: translateY(-33px);
+	}
+	5% {
+      opacity: 1;
+      transform: translateY(0px);
+	}
+	95% {
+      opacity: 1;
+      transform: translateY(0px);
+	}
+	100% {
+      opacity: 1;
+      transform: translateY(0px);
+	}
+  }
+  #intro-box {
+    position: relative;
+    display: inline-block;
+    animation: messageFadeIn 6s ease-in forwards;
+    width: 180px;
+    height: 33px;
+    padding-top: 6px;
+    margin-bottom: 3rem;
+    background-color: rgba(219, 234, 254, 0.7);
+    border: 1px solid #efefef;
+    border-radius: 30px;
+    -webkit-transition: ease-out 0.4s;
+    -moz-transition: ease-out 0.4s;
+    transition: ease-out 0.4s;
+  }
+  #intro-box:hover {
+    cursor: pointer;
+    color: #fff;
+    box-shadow: inset 0 0 0 50px rgba(59, 130, 246, 0);
+  }
+  #intro-box #intro-emoji {
+    position: absolute;
+    top: 10px;
+    left: 26px;
+  }
+  #intro-box #intro-emoji img {
+    width: 18px;
+  }
+  #intro-box #intro-span {
+    width: 100%;
+    height: 100%;
+    color: #343434;
+    font-weight: 600;
+    padding-left: 20px;
+  }
+</style>
+
 <div class="home">
+  <div id="intro-container">
+    <div id="intro-box">
+      <span id="intro-emoji">:microphone:</span>
+      <span id="intro-span">저를 소개합니다</span>
+    </div>
+  </div>
+  <script>
+    $('#intro-box').on('click', function (e) {
+      e.preventDefault();
+      location.href = '{{ site.baseurl }}/about/';
+    });
+  </script>
   <!--  {%- if page.title -%}  -->
   <!--    <h1 class="page-heading">{{ page.title }}</h1>  -->
   <!--  {%- endif -%}  -->
