--- a/assets/css/common-web.css
+++ b/assets/css/common-web.css
@@ -9,7 +9,7 @@
   position: sticky;
   top: 0;
   padding-top: 1px;
-  margin-bottom: 4rem;
+  /* margin-bottom: 4rem; */
   display: block;
   background-color: rgba(255, 255, 255, 0.88);
   z-index: 99;
