--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,14 +2,16 @@
 layout: default
 ---
 
-<h1>
-  {{ page.title }}
-  {% if page.author %}
-    <small class="post-subtitle">by {{ page.author }}</small>
-  {% else %}
-    <small class="post-subtitle">by namu</small>
-  {% endif %}
-</h1>
+<div id="post-title-box">
+  <h1>
+    {{ page.title }}
+    {% if page.author %}
+      <small class="post-subtitle">by {{ page.author }}</small>
+    {% else %}
+      <small class="post-subtitle">by namu</small>
+    {% endif %}
+  </h1>
+</div>
 <div class="post-date">
   {% if page.updated %}
     <div class="post-date-content">
