home: Modify link url pattern

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -72,7 +72,7 @@ layout: default
   <script>
     $('#intro-box').on('click', function (e) {
       e.preventDefault();
-      location.href = '{{ site.baseurl }}/about/';
+      location.href = '{{ site.github.url }}/about/';
     });
   </script>
   <!--  {%- if page.title -%}  -->
