--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -6,11 +6,13 @@ layout: default
   {% assign category = page.category | default: page.title %}
   {%- for post in site.categories[category] -%}
     {% assign content_length = post.content | size %}
-    <h1 class="home-post-title">
-      <a class="post-link" href="{{ site.github.url }}{{ post.url }}">
-        {{ post.title | escape }}
-      </a>
-    </h1>
+    <div class="title-box">
+      <h1 class="home-post-title">
+        <a class="post-link" href="{{ site.github.url }}{{ post.url }}">
+          {{ post.title | escape }}
+        </a>
+      </h1>
+    </div>
     <span class="home-post-date">
       <i class="fa fa-calendar" aria-hidden="true"></i>
       {{ post.date | date_to_string }} -
