--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -32,7 +32,6 @@ layout: default
     width: 180px;
     height: 33px;
     padding-top: 6px;
-    margin-bottom: 3rem;
     background-color: rgba(219, 234, 254, 0.7);
     border: 1px solid #efefef;
     border-radius: 30px;
@@ -87,11 +86,13 @@ layout: default
       {% if post.categories %}
         {% unless post.categories contains 'demian' or post.categories contains 'daily' %}
           {% assign content_length = post.content | size %}
-          <h1 class="home-post-title">
-            <a class="post-link" href="{{ site.github.url }}{{ post.url }}">
-              {{ post.title | escape }}
-            </a>
-          </h1>
+          <div class="title-box">
+            <h1 class="home-post-title">
+              <a class="post-link" href="{{ site.github.url }}{{ post.url }}">
+                {{ post.title | escape }}
+              </a>
+            </h1>
+          </div>
           <span class="home-post-date">
             <i class="fa fa-calendar" aria-hidden="true"></i>
             {% if post.updated %}
