home: Hide intro button

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -62,7 +62,7 @@ layout: default
 </style>
 
 <div class="home">
-  <div id="intro-container">
+  <div id="intro-container" style="display: none;">
     <div id="intro-box">
       <span id="intro-emoji">:microphone:</span>
       <span id="intro-span">저를 소개합니다</span>
