ui: Modify contents date view in list page

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -96,11 +96,12 @@ layout: default
             </h1>
           </div>
           <span class="home-post-date">
-            <i class="fa fa-calendar" aria-hidden="true"></i>
-            {% if post.updated %}
-              {{ post.updated | date: '%Y-%m-%d %H:%M' }} -
+            <i class="fa fa-calendar" aria-hidden="true"></i> [생성]
+            {% if post.created and post.updated %}
+              {{ post.created | date: '%Y-%m-%d' }}
+              [수정] {{ post.updated | date: '%Y-%m-%d' }} -
             {% else %}
-              {{ post.date | date: '%Y-%m-%d %H:%M' }} -
+              {{ post.date | date: '%Y-%m-%d' }} -
             {% endif %}
             <i class="fa fa-clock-o" aria-hidden="true"></i>
             {% include read-time.html %}
